--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.4",
     "@octokit/rest": "^19.0.7",
+    "@tanstack/react-query": "^4.23.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -23,6 +24,7 @@
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "swr": "^2.0.1",
     "typescript": "4.9.4"
   }
